# meme-box

./: .gitignore  package-lock.json  package.json
.github/workflows/: build_and_publish.yml  pullrequest.yml
memebox-streamdeck/: package-lock.json
projects/action-variables/: package-lock.json
projects/action-variables-ui/: package-lock.json
projects/app-state/: package-lock.json
projects/state-components/: package-lock.json
projects/ui-components/: package-lock.json
scripts/: move-binary.js
server/: persistence.ts  server-app.ts  server.ts
server/providers/: named-logger.ts
server/providers/actions/: action-active-state.ts
server/providers/actions/scripts/apis/: media.api.ts
server/providers/websockets/: action-activity-updates.websocket.ts  memebox.websocket.ts
server/rest-endpoints/: danger.ts
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/src/: main.rs
