[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.2", features = [] }

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tauri = { version = "1.0.0-rc.2", features = ["custom-protocol", "shell-execute"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
