[package]
name = "memebox"
version = "0.1.0"
description = "A meme-management tool"
license = "AGPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tauri = { version = "1.0.0-rc.4", features = ["custom-protocol", "shell-execute", "system-tray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
